--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="icon" href="images/blogfa-icon.gif" type="image/gif" sizes="16x16">
 </head>
 <body>
+<div id="container">
 <div id="header">
     <img src="images/blogfa-logo.gif" alt="LOGO" class="header-logo">
-
+    <div class="clear"></div>
     <div class="loginForm">
         <form action="">
-            <input type="text" placeholder="نام کاربری">
-            <input type="password" placeholder="کلمه عبور">
-            <input type="submit" name="ورود به بخش مدیریت وبلاگ">
+            <input type="text" placeholder="نام کاربری"><br>
+            <input type="password" placeholder="کلمه عبور"><br>
+            <input type="submit" value="ورود به بخش مدیریت وبلاگ">
         </form>
         <a href="#">کلمه عبور را فراموش کرده ام</a>
     </div>
@@ -23,7 +24,7 @@
         <button>ثبت نام و ایجاد وبلاگ</button>
     </div>
 </div>
-
+<div class="clear"></div>
 <div id="content">
     <hr><div class="title"><a href="#">وبلاگهای بروز شده</a></div>
     <ul>
@@ -98,6 +99,6 @@
         <li><a href="#">تماس با ما</a></li>
     </ul>
 </div>
-
+</div>
 </body>
 </html>
