--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a href="#">کلمه عبور را فراموش کرده ام</a>
     </div>
     <div class="createWeblog">
-        <p>بلاگفا یک ابزار قدرتمند برای ساخت و مدیریت وبلاگ است . بلاگفا به شما کمک می‌کند تا با سرعت و سهولت اطلاعات، خاطرات، مطالب و مقالات خود را در اینترنت منتشر کنید.</p>
-        <button>ثبت نام و ایجاد وبلاگ</button>
+        <h1>بلاگفا یک ابزار قدرتمند برای ساخت و مدیریت وبلاگ است . بلاگفا به شما کمک می‌کند تا با سرعت و سهولت اطلاعات، خاطرات، مطالب و مقالات خود را در اینترنت منتشر کنید.</h1>
+        <button>ثبت نام و ایجاد وبلاگ جدید</button>
     </div>
 </div>
 <div class="clear"></div>
