--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="password" placeholder="کلمه عبور"><br>
             <input type="submit" value="ورود به بخش مدیریت وبلاگ">
         </form>
-        <a href="#">کلمه عبور را فراموش کرده ام</a>
+        <a href="#" id="forgottnPassWord">کلمه عبور را فراموش کردم</a>
     </div>
     <div class="createWeblog">
         <h1>بلاگفا یک ابزار قدرتمند برای ساخت و مدیریت وبلاگ است . بلاگفا به شما کمک می‌کند تا با سرعت و سهولت اطلاعات، خاطرات، مطالب و مقالات خود را در اینترنت منتشر کنید.</h1>
@@ -26,7 +26,8 @@
 </div>
 <div class="clear"></div>
 <div id="content">
-    <hr><div class="title"><a href="#">وبلاگهای بروز شده</a></div>
+    <hr id="updatedSitesLine">
+    <div class="title" id="updatedSitesTitle"><a href="#">وبلاگ های بروز شده</a></div>
     <ul>
         <li>
             <h2><a href="#">کیک کدو حلوائی</a></h2>
@@ -89,14 +90,14 @@
 
 <div id="footer">
     <ul>
-        <li><a href="#">وبلاگهای بروز شده</a></li>
-        <li><a href="#">فهرست وبلاگها</a></li>
-        <li><a href="#">ثبت وبلاگ جدید</a></li>
-        <li><a href="#">راهنما</a></li>
-        <li><a href="#">تبلیغات در وبلاگها</a></li>
-        <li><a href="#">گزارش تخلف</a></li>
-        <li><a href="#">اخبار سایت</a></li>
-        <li><a href="#">تماس با ما</a></li>
+        <li><a href="#">وبلاگهای بروز شده</a>|</li>
+        <li><a href="#">فهرست وبلاگها</a>|</li>
+        <li><a href="#">ثبت وبلاگ جدید</a>|</li>
+        <li><a href="#">راهنما</a>|</li>
+        <li><a href="#" class="redText">تبلیغات در وبلاگها</a>|</li>
+        <li><a href="#">گزارش تخلف</a>|</li>
+        <li><a href="#">اخبار سایت</a>|</li>
+        <li><a href="#">تماس با ما</a>|</li>
     </ul>
 </div>
 </div>
